Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.0 - Current
  Matt Brookings
  - Added configurable password strength enforcement
  - Updated vusaged to call vauth_open
  - Fixed OpenLDAP module reporting itself as "ldap" rather than "openldap"
  - Updated all modules to export module feature IP_ALIAS_DOMAINS
  - Updated all module configure scripts to have --enable-ip-alias-domains
  - Updated main source to look for module exported feature IP_ALIAS_DOMAINS
  - Updated main source configure script to disallow --enable-ip-alias-domains
  - Added initial OpenLDAP module entry to replace the "ldap" module
  - Updated some vpopmail daemon formatting calls to check buffer bounds
  - Updated vusage daemon to store cached copy of vpopmail user authentication
    structure
  - Updated cdb module auth-logging feature to be on by default
  - Updated vusage daemon to use module API to get last authentication time
  - Added authentication module feature API which provides optional module
    feature information to callers.
  - Updated old maildirsize creation function to set proper uid/gid on target
  - Updated authentication modules to remove maildirsize file when a quota is set to NOQUOTA
  - Fixed a bug in client functions that tried to evaluate a NULL string
  - Fixed several bugs in vusaged relating to duplicate items in the work queue
  - Added entirely new code for saving and loading snapshot of current items in vusaged memory
  - Added preferred make binary selection to configure script
  - Renamed queue_t to wqueue_t for Solaris
  - Renamed local domain socket variable (again)
  - Added default LLONG_MAX definition
  - Updated strtoll error checking to check for LLONG_MAX instead of LONG_MAX
  - Made yet more modifications in storage.h for htonll and ntohll compatibility
  - Fixed vchkpw calling strstr with NULL value